force-app/main/default/objects/Assessment__c/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <label>Actions Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>