force-app/main/default/objects/Assessment__c/fields/Adult_relationships_since_the_MFIRA__c.field-meta.xml
<CustomField>
    <fullName>Adult_relationships_since_the_MFIRA__c</fullName>
    <inlineHelpText>Adult relationships since the MFIRA or the last MFRRA</inlineHelpText>
    <label>Adult relationships since the MFIRA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No problem with adult relationships (0)</fullName>
                <default>true</default>
                <label>No problem with adult relationships (0)</label>
            </value>
            <value>
                <fullName>Yes, problems with adult relationships (select all that apply) (1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>