force-app/main/default/objects/Assessment__c/fields/Alcohol_Select_one__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Select_one__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Secondary Caregiver Alcohol</inlineHelpText>
    <label>Alcohol(Select one)</label>
    <type>Checkbox</type>
</CustomField>