force-app/main/default/objects/Assessment__c/fields/Case_Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Worker_Name__c</fullName>
    <label>Case Worker Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>