force-app/main/default/objects/Assessment__c/fields/Caseworker_comments__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_comments__c</fullName>
    <label>Caseworker comments</label>
    <type>TextArea</type>
</CustomField>