force-app/main/default/objects/Assessment__c/fields/Characteristics_of_children_household__c.field-meta.xml
<CustomField>
    <fullName>Characteristics_of_children_household__c</fullName>
    <inlineHelpText>Characteristics of children in the household(select all that apply)</inlineHelpText>
    <label>Characteristics of children household</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medically fragile/failure to thrive (1)</fullName>
                <default>true</default>
                <label>Medically fragile/failure to thrive (1)</label>
            </value>
            <value>
                <fullName>Physical disability (1)</fullName>
            </value>
            <value>
                <fullName>Developmental disability (1)</fullName>
            </value>
            <value>
                <fullName>Learning disability (1)</fullName>
            </value>
            <value>
                <fullName>None of the above (0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>