force-app/main/default/objects/Assessment__c/fields/Current_Placement__c.field-meta.xml
<CustomField>
    <fullName>Current_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Placement</label>
    <type>Checkbox</type>
</CustomField>