force-app/main/default/objects/Assessment__c/fields/Demonstarte_SecondaryCaregiver__c.field-meta.xml
<CustomField>
    <fullName>Demonstarte_SecondaryCaregiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SecondaryCaregiver</label>
    <type>Checkbox</type>
</CustomField>