force-app/main/default/objects/Assessment__c/fields/Department_is_unable_to_locate_child__c.field-meta.xml
<CustomField>
    <fullName>Department_is_unable_to_locate_child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Department is unable to locate the family/child</inlineHelpText>
    <label>Department is unable to locate child</label>
    <type>Checkbox</type>
</CustomField>