force-app/main/default/objects/Assessment__c/fields/Does_not_Demonstrate_Primary_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Does_not_Demonstrate_Primary_Caregiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Caregiver</label>
    <type>Checkbox</type>
</CustomField>