force-app/main/default/objects/Assessment__c/fields/FamilyInitialRiskAssessmentStage__c.field-meta.xml
<CustomField>
    <fullName>FamilyInitialRiskAssessmentStage__c</fullName>
    <label>FamilyInitialRiskAssessmentStage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Family and Household Composition</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Neglect/Abuse Index</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Scoring and Overrides</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Supplemental Question</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>