force-app/main/default/objects/Assessment__c/fields/FIRA_Age_of_youngest_child__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Age_of_youngest_child__c</fullName>
    <inlineHelpText>Age of youngest child in the home</inlineHelpText>
    <label>Age of youngest child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 or older</fullName>
            </value>
            <value>
                <fullName>Under 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>