force-app/main/default/objects/Assessment__c/fields/FIRA_Age_of_youngest_child_Abuse_score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Age_of_youngest_child_Abuse_score__c</fullName>
    <inlineHelpText>Abuse Score-Age of youngest child in the home</inlineHelpText>
    <label>Age of youngest child Abuse score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>