force-app/main/default/objects/Assessment__c/fields/FIRA_Age_of_youngest_child_neglect_score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Age_of_youngest_child_neglect_score__c</fullName>
    <inlineHelpText>Neglect score-Age of youngest child in the home</inlineHelpText>
    <label>Age of youngest child neglect score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>