force-app/main/default/objects/Assessment__c/fields/FIRA_Alcohol_Select_one__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Alcohol_Select_one__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Alcohol(Select one)</inlineHelpText>
    <label>Alcohol(Select one)</label>
    <type>Checkbox</type>
</CustomField>