force-app/main/default/objects/Assessment__c/fields/FIRA_Case_worker_Signature__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Case_worker_Signature__c</fullName>
    <label>Case worker Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>