force-app/main/default/objects/Assessment__c/fields/FIRA_Characteristic_child_Abuse_Score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Characteristic_child_Abuse_Score__c</fullName>
    <inlineHelpText>Abuse score-Characteristics of children in the household(Select all that apply)</inlineHelpText>
    <label>Characteristic of child Abuse Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>