force-app/main/default/objects/Assessment__c/fields/FIRA_Characteristic_child_neglect_score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Characteristic_child_neglect_score__c</fullName>
    <inlineHelpText>Neglect score-Characteristics of children in the household(Select all that apply)</inlineHelpText>
    <label>Characteristic of child neglect score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>