force-app/main/default/objects/Assessment__c/fields/FIRA_Current_Report_Abuse_Score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Current_Report_Abuse_Score__c</fullName>
    <inlineHelpText>Abuse Score-Current Report is for</inlineHelpText>
    <label>Current Report Abuse Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>