force-app/main/default/objects/Assessment__c/fields/FIRA_Current_Report_is_for__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Current_Report_is_for__c</fullName>
    <label>Current Report is for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Abuse</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Other(ROH,ROA,voluntary/self-referral)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>