force-app/main/default/objects/Assessment__c/fields/FIRA_Discretionary_override_reason__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Discretionary_override_reason__c</fullName>
    <label>Discretionary override reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>