force-app/main/default/objects/Assessment__c/fields/FIRA_Does_either_caregiver_have_history__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Does_either_caregiver_have_history__c</fullName>
    <inlineHelpText>Does either caregiver have a history of criminal behavior within the past three years?</inlineHelpText>
    <label>Does either caregiver have history</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>