force-app/main/default/objects/Assessment__c/fields/FIRA_Drugs_Select_One__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Drugs_Select_One__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drugs(Select One)</label>
    <type>Checkbox</type>
</CustomField>