force-app/main/default/objects/Assessment__c/fields/FIRA_Household_previously_Abuse_Score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Household_previously_Abuse_Score__c</fullName>
    <inlineHelpText>Abuse Score - Household previously had an open IHFS/OHP case due to Child Abuse/Neglect (voluntary/court ordered)</inlineHelpText>
    <label>Household previously Abuse Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>