force-app/main/default/objects/Assessment__c/fields/FIRA_Household_previously_had_open_IHFS__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Household_previously_had_open_IHFS__c</fullName>
    <inlineHelpText>Household previously had an open IHFS/OHP case due to Child Abuse/Neglect (voluntary/court ordered)</inlineHelpText>
    <label>Household previously had open IHFS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>