force-app/main/default/objects/Assessment__c/fields/FIRA_Housing__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Housing__c</fullName>
    <inlineHelpText>Housing(Select all that apply)</inlineHelpText>
    <label>Housing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current housing physically unsafe</fullName>
            </value>
            <value>
                <fullName>Homeless at time CPS response began</fullName>
            </value>
            <value>
                <fullName>Family has housing that physicallly safe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>