force-app/main/default/objects/Assessment__c/fields/FIRA_Housing_Neglect_Score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Housing_Neglect_Score__c</fullName>
    <inlineHelpText>Neglect score-Housing(Select all that apply)</inlineHelpText>
    <label>Housing Neglect Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>