force-app/main/default/objects/Assessment__c/fields/FIRA_Number_of_children_Abuse_Score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Number_of_children_Abuse_Score__c</fullName>
    <inlineHelpText>Abuse score-Number of children identified as being directly involved in the current CPS Response/ROH(including AR and ROH; does not include ROA)</inlineHelpText>
    <label>Number of children Abuse Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>