force-app/main/default/objects/Assessment__c/fields/FIRA_Number_of_children_identified__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Number_of_children_identified__c</fullName>
    <inlineHelpText>Number of children identified as being directly involved in the current CPS Response/ROH(including AR and ROH; does not include ROA)</inlineHelpText>
    <label>Number of children identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zero,One,Two or Three</fullName>
            </value>
            <value>
                <fullName>Four or More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>