force-app/main/default/objects/Assessment__c/fields/FIRA_Primary__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary__c</fullName>
    <label>Primary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrest</fullName>
            </value>
            <value>
                <fullName>Conviction</fullName>
            </value>
            <value>
                <fullName>Felony Conviction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>