force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiv_has_history_neglect__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiv_has_history_neglect__c</fullName>
    <inlineHelpText>Neglect Score-Primary caregiver has a history of abuse or neglect as a child</inlineHelpText>
    <label>Primary caregiver has history neglect</label>
    <length>10</length>
    <type>Text</type>
</CustomField>