force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregive_has_mental_abuse__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregive_has_mental_abuse__c</fullName>
    <inlineHelpText>Abuse score-Primary caregiver has a past or current mental health problem(If yes,please select one)</inlineHelpText>
    <label>Primary caregiver has mental abuse</label>
    <length>10</length>
    <type>Text</type>
</CustomField>