force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregive_has_mental_neglect__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregive_has_mental_neglect__c</fullName>
    <inlineHelpText>Neglect score-Primary caregiver has a past or current mental health problem(If yes,please select one)</inlineHelpText>
    <label>Primary caregiver has mental neglect</label>
    <length>10</length>
    <type>Text</type>
</CustomField>