force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_abuse_score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_abuse_score__c</fullName>
    <inlineHelpText>Abuse score-Primary caregiver&apos;s assessment of incident(Select all that apply)</inlineHelpText>
    <label>Primary caregiver assess abuse score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>