force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_alcohol_abuse__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_alcohol_abuse__c</fullName>
    <inlineHelpText>Abuse score-Primary caregiver has past or current alcohol or substance abuse problem</inlineHelpText>
    <label>Primary caregiver alcohol abuse</label>
    <length>10</length>
    <type>Text</type>
</CustomField>