force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_assessment__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_assessment__c</fullName>
    <inlineHelpText>Primary caregiver&apos;s assessment of incident(Select all that apply)</inlineHelpText>
    <label>Primary caregiver&apos;s assessment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blames child</fullName>
            </value>
            <value>
                <fullName>Justifies maltreatment of the child</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>