force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_charac_neglect__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_charac_neglect__c</fullName>
    <inlineHelpText>Neglect score-Primary caregiver characteristics(Select all that apply)</inlineHelpText>
    <label>Primary caregiver charac neglect</label>
    <length>10</length>
    <type>Text</type>
</CustomField>