force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_characteristics__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_characteristics__c</fullName>
    <inlineHelpText>Primary caregiver characteristics(Select all that apply)</inlineHelpText>
    <label>Primary caregiver characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provides insufficient emotional/psychological support</fullName>
            </value>
            <value>
                <fullName>Employs excessive/inappropiate discipline</fullName>
            </value>
            <value>
                <fullName>Domineering caregiver</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>