force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_has_history__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_has_history__c</fullName>
    <inlineHelpText>Primary caregiver has a history of abuse or neglect as a child</inlineHelpText>
    <label>Primary caregiver has history</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>