force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_has_history_abuse__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_has_history_abuse__c</fullName>
    <inlineHelpText>Abuse Score-Primary caregiver has a history of abuse or neglect as a child</inlineHelpText>
    <label>Primary caregiver has history abuse</label>
    <length>10</length>
    <type>Text</type>
</CustomField>