force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_has_past_mental__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_has_past_mental__c</fullName>
    <inlineHelpText>Primary caregiver has a past or current mental health problem(If yes,please select one)</inlineHelpText>
    <label>Primary caregiver has past mental</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>