force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_past_alcohol__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_past_alcohol__c</fullName>
    <inlineHelpText>Primary caregiver has past or current alcohol or substance abuse problem</inlineHelpText>
    <label>Primary caregiver past alcohol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>