force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_provides_neglect__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_provides_neglect__c</fullName>
    <inlineHelpText>Neglect score-Primary caregiver provides physical care consistent with each child&apos;s needs</inlineHelpText>
    <label>Primary caregiver provides neglect</label>
    <length>10</length>
    <type>Text</type>
</CustomField>