force-app/main/default/objects/Assessment__c/fields/FIRA_Primary_caregiver_provides_physical__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Primary_caregiver_provides_physical__c</fullName>
    <inlineHelpText>Primary caregiver provides physical care consistent with each child&apos;s needs</inlineHelpText>
    <label>Primary caregiver provides physical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>