force-app/main/default/objects/Assessment__c/fields/FIRA_Prior_Abuse__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Prior_Abuse__c</fullName>
    <label>Prior Abuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three or More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>