force-app/main/default/objects/Assessment__c/fields/FIRA_Prior_CPS_Abuse_Score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Prior_CPS_Abuse_Score__c</fullName>
    <inlineHelpText>Abuse Score - Prior CPS Response(IR/AR)</inlineHelpText>
    <label>Prior CPS Abuse Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>