force-app/main/default/objects/Assessment__c/fields/FIRA_Prior_CPS_Response__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Prior_CPS_Response__c</fullName>
    <label>Prior CPS Response(IR/AR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>