force-app/main/default/objects/Assessment__c/fields/FIRA_Prior_Neglect_Score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Prior_Neglect_Score__c</fullName>
    <label>Prior Neglect Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>