force-app/main/default/objects/Assessment__c/fields/FIRA_Prior_non_accidential_Abuse_Score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Prior_non_accidential_Abuse_Score__c</fullName>
    <inlineHelpText>Abuse score - Prior non accidential injury to any child in the household</inlineHelpText>
    <label>Prior non accidential Abuse Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>