force-app/main/default/objects/Assessment__c/fields/FIRA_Prior_non_accidential_injury__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Prior_non_accidential_injury__c</fullName>
    <inlineHelpText>Prior non accidential injury to any child in the household</inlineHelpText>
    <label>Prior non accidential injury</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>