force-app/main/default/objects/Assessment__c/fields/FIRA_Prior_non_accidential_neglect_score__c.field-meta.xml
<CustomField>
    <fullName>FIRA_Prior_non_accidential_neglect_score__c</fullName>
    <inlineHelpText>Neglect Score - Prior non accidential injury to any child in the household</inlineHelpText>
    <label>Prior non accidential neglect score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>